--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,14 @@
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
 
+  <script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+  </script>
   <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="./css/syntax.css">
+  <link rel="stylesheet" href="/css/syntax.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 
 </head>
 
