--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="contenttable">
-    <div id='footer1'>
+    <article>
       <p>St. Anthony Park Library Association
         <br />2245 Como Avenue
         <br />Saint Paul, MN 55108</p>
@@ -12,12 +12,12 @@
       <p>Website
         <a href="/info/website.html">details</a>
         <br />Copyright © 2013 St. Anthony Park Library Association.</p>
-    </div>
-    <div id='footer2'>
+    </article>
+    <article>
       <p>
         <a class='twitter-follow-button' 
         data-lang='en' data-show-count='false' data-size='large' 
-        href='https://twitter.com/SAPArtsFestival'>Follow @SAPArtsFestival</a>
+        href='https://twitter.com/SAPArtsFestival'>Follow @SAPArtsFestival</a> on Twitter
       </p>
       <p>
         <a href='http://www.facebook.com/pages/Saint-Anthony-Park-Arts-Festival/229315300478251' 
@@ -27,7 +27,7 @@
            style='border: 0px;'>
         </a>
       </p>
-    </div>
+    </article>
   </div>
 </footer>
 <script>
