--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,22 @@
 ---
-layout: default
+layout: basic
+top_menu_id: news
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-<div class="post">
-{{ content }}
+<div class="contenttable">
+  <article>
+    <h2>{{ page.title }}</h2>
+    <p class="date">{{ page.date | date_to_string }}</p>
+    <div class="post">
+      {{ content }}
+    </div>  
+  </article>
+  <aside>
+    <h3>More news:</h3>
+    <ul class="nav">
+      {% for post in site.posts limit:40 %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% cycle '', '', '', '<br/>' %}
+      {% endfor %}
+    </ul>
+  </aside>
 </div>
