--- a/css/main.css
+++ b/css/main.css
@@ -53,18 +53,18 @@ header a {
 }
 
 hgroup {
-  font-family: "rooney-web", serif;
-  text-shadow: 2px 2px #311;
-  margin-top: 39px;
+  margin-top: 32px;
   margin-bottom: 20px;
 }
 hgroup h1, hgroup h2 {
+  font-family: "rooney-web", serif;
+  text-shadow: 2px 2px #311;
   padding-left: 1em;
   padding-right: 1em;
 }
 hgroup h1 {
   margin-top: 0;
-  font-size: 32px;
+  font-size: 38px;
 }
 .bull { display: inline; }
 hgroup h2 {
@@ -134,6 +134,9 @@ section {
   float: right;
   font-weight: normal;
 }
+.date {
+  color: grey;
+}
 
 #map {
   max-width: 100%;
@@ -143,9 +146,6 @@ section {
   height: 9.5em;
 }
 
-article {
-  margin: 16px;
-}
 article nav ul {
   padding: 0;
   margin: 0;
@@ -156,10 +156,6 @@ article nav li {
 }
 article img {
   max-width: 100%;
-}
-
-aside {
-/*  @include span-columns(12, 12, 2em);*/
 }
 
 textarea, input {
@@ -174,7 +170,7 @@ textarea, input {
   margin-bottom: 0.5em;
 }
 .hero img {
-  width: 400px;
+  width: 245px;
   padding: 0.3em;
 }
 .hero p {
@@ -193,6 +189,8 @@ textarea, input {
 .contenttable aside {
   display: table-cell;
 }
+.contenttable article { width: 65%; }
+.contenttable aside { width: 35%; }
 
 #andersen {
   width: 400px;
@@ -256,10 +254,9 @@ footer {
 footer p {
   margin-top: 0;
 }
-#footer1, #footer2 {
-  display: table-cell;
+footer article {
+  width: 460px;
 }
-
 /****************************
  * Forms
  */
